fix: search and data alignment

--- a/app/src/static/components/_dashboard.scss
+++ b/app/src/static/components/_dashboard.scss
@@ -1,4 +1,10 @@
-.container {
-  align-items: center;
-  justify-content: center;
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-size: 16px;
+  font-family: 'Lato', 'sans-serif';
 }
