--- a/app/src/static/components/_data.scss
+++ b/app/src/static/components/_data.scss
@@ -1,5 +1,11 @@
+.data {
+  display: flex;
+}
+
 .card {
-  width: 370px;
+  font-size: 20px;
+  width: 350px;
+  min-height: 140px;
   padding: 10px;
   margin: 10px;
 }
