--- a/app/src/static/components/_search.scss
+++ b/app/src/static/components/_search.scss
@@ -1,12 +1,41 @@
+
+.header {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 35px;
+
+}
+
+form.searchbar {
+  display: inline-block;
+}
+
+input.input {
+  width: 100%;
+  height: 44px;  
+  font-size: 16px;
+}
+
 .searchbar {
-  min-width: 500px;
+  width: 240px;
   display: inline-flex;
   text-align: left;
-  padding-bottom: 20px;
   align-content: center;
-  font-size: 15px;
 }
 
 .dropdown {
-  float: right;
+  margin-left: 10px;
+}
+
+select, option {
+  height: 44px;
+  color: #444444;
+  background: #F3F3F3;
+  border: 1px #DADADA solid;
+  padding: 5px 10px;
+  border-radius: 2px;
+  font-weight: bold;
+  font-size: 9pt;
+  outline: none;
+  cursor: pointer;
 }
