--- a/app/src/static/components/_title.scss
+++ b/app/src/static/components/_title.scss
@@ -1,5 +1,4 @@
 .title { 
-  padding-left: 10px;
-  padding-top: 10px;
+  padding: 25px 0 5px 0;
   text-align: center;
 }
